package az.alizeynalli.cashflow.repository;

import az.alizeynalli.cashflow.core.entity.Income;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface IncomeRepository extends JpaRepository<Income, Long> {
}
