@startuml
interface IncomeRepository{
}

interface ExpenseRepository{
}

class IncomeController {
    - IncomeService service;
    + List<Income> getIncomes();
}

class ExpenseController {
    - ExpenseService service;
    + List<Expense> getExpenses();
}

class IncomeService {
    - IncomeRepository repository;
    + List<Income> getIncomes();
}

class ExpenseService {
    - ExpenseRepository repository;
    + List<Expense> getExpenses();
}

IncomeController --> IncomeService
ExpenseController --> ExpenseService
IncomeService --> IncomeRepository
ExpenseService --> ExpenseRepository
@enduml